  hexadecimal format.

* The openssl network backend now reads the ssl configuration file allowing
  the use of openssl engines.


QtOpenGL
--------

QtScript
--------


QTestLib
--------
* [QTBUG-20615] Autotests can now log test output to multiple destinations
  and log formats simultaneously.


* removeRows() no longer emits extra beforeDelete signal for out of range row.

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------
* Accessibility framework uses IAccessible2


Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************

- Build System

  * Remove qttest_p4.prf file. From now on we should explicitly enable the
    things from it which we want. Autotest .pro files should stop using
    'load(qttest_p4)' and start using 'CONFIG+=testcase' instead.

- Assistant

- Designer
  * [QTBUG-8926] [QTBUG-20440] Properties of type QStringList now have
    translation attributes which apply to all items.
    They are by default translatable.

- Linguist

- rcc


- moc
